--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^3.4.1",
     "typescript": "~3.7.2"
   },
+  "proxy": "http://192.168.1.100:9090",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
